--- a/security/acme-client/src/opnsense/mvc/app/controllers/OPNsense/AcmeClient/forms/dialogValidation.xml
+++ b/security/acme-client/src/opnsense/mvc/app/controllers/OPNsense/AcmeClient/forms/dialogValidation.xml
@@ -1949,4 +1949,19 @@
         <label>API Key</label>
         <type>text</type>
     </field>
+    <field>
+        <label>zoneedit</label>
+        <type>header</type>
+        <style>table_dns table_dns_zoneedit</style>
+    </field>
+    <field>
+        <id>validation.dns_zoneedit_user</id>
+        <label>Username</label>
+        <type>text</type>
+    </field>
+    <field>
+        <id>validation.dns_zoneedit_token</id>
+        <label>Token</label>
+        <type>password</type>
+    </field>
 </form>
